---------------------------------------------------------------------------------------------------
Version: 2.5.2
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 2.5.1
Date: 2025-09-02
  Bugfixes:
    - Fixed problem with entity rotation in blueprint book import, in some rare cases.
---------------------------------------------------------------------------------------------------
Version: 2.5.0
Date: 2025-09-02
  Features:
    - Added ability to import/export an entire project to a shareable string!
    - Added ability to import a project from a blueprint book (string), with a few caveats: requires the book to have snap-to-grid enabled on all blueprints.
   Changes:
    - Removed the "teleport on gps tag" feature. This is obsoleted by Editor setting "Move player to editor location on exit".
---------------------------------------------------------------------------------------------------
Version: 2.4.1
Date: 2025-08-13
  Changes:
---------------------------------------------------------------------------------------------------
Version: 2.4.0
Date: 2025-08-13
  Features:
    - Added support for editing blueprint descriptions.
---------------------------------------------------------------------------------------------------
Version: 2.3.8
Date: 2025-08-12
  Bugfixes:
    - Fixed that you couldn't set a recipe with a different quality on an assembling machine... This should have been fixed earlier, sorry!
    - Fixed being a bit mean to Po in the changelog.
---------------------------------------------------------------------------------------------------
Version: 2.3.7
Date: 2025-06-09
  Changes:
    - Decreased selection priority of previews. Other entities should be selected first if they overlap with previews.
---------------------------------------------------------------------------------------------------
Version: 2.3.6
Date: 2025-06-06
  Bugfixes: