@@ -23,14 +23,7 @@
       "postpackage": "npm run postpackage"
     },
     "git_publish_branch": "main",
-    "ignore": [
-      "**/test/**/*",
-      "**/*.xcf",
-      "**/*.svg",
-      "mod-portal/**/*",
-      "**/*.ts",
-      "**/*.tsx"
-    ],
+    "ignore": ["**/test/**/*", "**/*.xcf", "**/*.svg", "mod-portal/**/*", "**/*.ts", "**/*.tsx"],
     "removeZipAfterPackage": true,
     "no_git_tag": true,
     "sync_portal_details": true
