@@ -1,7 +1,9 @@
 ---------------------------------------------------------------------------------------------------
 Version: 2.5.2
 Date: ????
-  Changes:
+  Bugfixes:
+    - Fixed several issues related to blueprint icon settings.
+    - This may also fix crashes when creating a new stage, on a project created in an earlier version.
 ---------------------------------------------------------------------------------------------------
 Version: 2.5.1
 Date: 2025-09-02
